src/assets/css/style.css
:root {
    /* site colors */
    --clr-primary: #ee6352;
    --clr-danger: rgb(220, 53, 69);
    --clr-success: rgb(34, 170, 68);

    --clr-blue: rgb(27, 47, 65);
    --clr-light-blue: rgb(219, 236, 250);
    --clr-grey: rgb(216, 214, 211);
    --clr-light-grey: #F7F7F7;
    --clr-red: #a31621;
    --clr-light: rgb(252, 252, 252);
    --clr-dark: hwb(0 15% 85%);
    --clr-green: #49A078;
    --clr-yellow: #FFB834;
    --clr-teal: #3598d1;
    --clr-blue-steel: rgb(103, 152, 180);


    /* font sizes */
    --fs-300: 3rem;
    --fs-275: 2.75rem;
    --fs-250: 2.5rem;
    --fs-225: 2.25rem;
    --fs-200: 2rem;
    --fs-175: 1.75rem;
    --fs-150: 1.5rem;
    --fs-125: 1.25rem;
    --fs-100: 1rem;
    --fs-075: 0.75rem;
    --fs-050: 0.5rem;
    
    /* size */
    --size-1: 1rem;
    --size-2: 2rem;
    --size-3: 3rem;
    --size-4: 4rem;
    --size-5: 5rem;
    --size-6: 6rem;

    /* header heights */
    --header-height: 5rem;
    --header-height-wide: 6rem;
}

.check-icon {
    color: var(--clr-success);
    font-size: 4rem;
}

html {
    font-size: 62.5%;
}

body {
  min-width: 100vw;
  min-height: 100vh;
  margin-inline: auto;
  font-family: 'Poppins', sans-serif;
  font-size: var(--fs-125);
  line-height: 1.5;
  color: var(--clr-dark);
  background-color: var(--clr-light);
  overflow-x: hidden;
}

a {
    color: var(--clr-blue)
}

.main-header {
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: space-between;
  min-height: var(--header-height);
  min-width: 300px;
  width: 100%;
  padding-inline: var(--size-1);
  color: var(--clr-grey);
  background-color: var(--clr-blue);
  z-index: 1000;
}


.wrapper {
  position: relative;
  min-width: 300px;
  height: auto;
  padding-block-start: var(--header-height);
  max-width: 1170px;
  min-height: calc(100vh - (2 * var(--header-height)));
}

.content {
  min-height: inherit;
  margin: auto;
  padding: 2rem;
}

button:hover {
  cursor: pointer;
}

/* spinner */
.loading {
  display: block;
}

.loading-container {
  display: flex;
  flex-direction: column;
  height: fit-content;
  align-items: center;
  justify-content: center;
  width: 100%;
  border-radius: 5px;
}

.loading-content {
  height: fit-content;
}

.loading-container p { 
  color: var(--clr-blue);
}

.loading-icon {
  margin-block-end: 2rem;
  font-size: 4rem;
  color: var(--clr-blue);
  animation: animate 0.5s linear infinite;
}

@keyframes animate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
/* end spinner */

div.container {
  display: flex;
  align-items: center;
  flex-direction: column;
  /* margin-top: 1rem; */
}

.main {
     /* padding-block: 3rem; */
     /* padding: 2rem; */
}

.header {
  width: 100%;
  padding: 2rem;
}

.btn {
  width: 100%;
  padding-block: 0.6rem;
  font-size: var(--fs-150);
  font-weight: 500;
  text-align: center;
  border-radius: 5px;
}



.title {
    text-align: center;
    font-size: var(--fs-250);
    font-weight: 300;
}

.article {
  flex-basis: 100%;
  margin-inline: auto;
}

.article-title {
  padding: 2rem;
  font-weight: 300;
  text-align: center;
  border-bottom: 1px solid var(--clr-grey); 
}

.article-body {
    padding: 1rem;
}

/* 404 */
.not-found {
  text-align: center;
}

.not-found button {
  margin-top: 2rem;
  width: 50%;
}

/* Not found search page */
.card-not-found header {
  width: 100%;
  min-height: 20rem;
  background-image: url('https://cards.scryfall.io/art_crop/front/1/9/1904db14-6df7-424f-afa5-e3dfab31300a.jpg?1562862327');
  background-repeat: no-repeat;
  background-position: 50% 8%;
  background-color: var(--clr-light-grey);
}

.card-not-found h2 {
  margin-block: 2rem;
  padding-inline: 1rem;
  line-height: 1.8;
  text-align: center;
}

.card-not-found p {
  padding: 2rem;
  font-weight: 500;
  font-size: var(--fs-150);
  text-align: center;
}

section.banner {
  width: 100%;
  min-height: 20rem;
  background-image: url('https://cards.scryfall.io/art_crop/front/8/1/817f782f-7e62-44b3-9bb2-3a57d34dfe67.jpg?1682690866');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-color: var(--clr-light-grey);
}

/* No card collection page */
.message-section {
  margin-block-start: var(--size-2);
  /* padding-inline: var(--size-1); */
}

.message-body p {
  font-weight: 400;
  font-size: var(--fs-150);
  line-height: 1.6;
  margin-block-end: 1rem;
}


.message-link {
  font-size: var(--fs-150);
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1.5rem;
  text-align: center;
  color: var(--clr-light);
  background-color: var(--clr-blue);
  border: 1px solid var(--clr-grey);
  border-radius: 5px;
}

.message-link svg {

  margin-inline-start: 1rem;
  width: 2rem;
  height: 2rem;
}

/* Footer styles */
.footer {
    display: flex;
    justify-content: center;
    min-width: 300px;
    min-height: var(--header-height);
    font-size: var(--fs-100);
  }

  .footer p {
    align-self: flex-end;
    padding-block: var(--size-1);
  }

  /* Modal */
  .overlay {
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    padding-inline: var(--size-2);
    background-color: rgba(216, 214, 211, .7);
    overflow-y: hidden;
    z-index: 3000;
  }

  .expanded-card {
    margin-top: 5rem;
  }

